# MLOps

./: .gitignore  pyproject.toml
experiment_management/mlflow/: Dockerfile  README.md  docker-compose.yaml
kubernetes/: .gitignore  README.md
kubernetes/cert-manager/: install.sh  uninstall.sh
kubernetes/install/kubectl/: main.tf
kubernetes/install/onprem-rke2/: main.tf  outputs.tf  variables.tf
kubernetes/install/rancher/: install.sh  uninstall.sh
kubernetes/kubeflow/pipelines/: main.py  pyproject.toml  uninstall.sh
kubernetes/kubeflow/pipelines_standalone/: README.md  install.sh
kubernetes/onprem-rke2/: README.md  install.bash  install.sh  uninstall.bash
kubernetes/persistent_volume/local_path_provisioner/: READEME.md  install.bash  install.sh  uninstall.bash  uninstall.sh
kubernetes/rancher/: install.sh  uninstall.sh
kubernetes/tools/helm/: install.bash  install.sh
kubernetes/tools/kubectl/: install.bash  install.sh
kubernetes/tools/kustomize/: install.bash
pipelines/kubeflow/보금자리론대출QA-LLama-Tuning/: README.md
serving/triton/: .env.example  .gitignore  Dockerfile  docker-compose.yaml
serving/triton/client/: README.md  main.py  pyproject.toml
serving/triton/client/hunyuan3d/: main.py
serving/triton/client/llama/: main_langchain.py  main_openai.py
serving/triton/client/stable_diffusion/: main.py
serving/triton/client/step1x-3d/: main.py
serving/triton/docker/: Hunyuan.Dockerfile  StableDiffusion.Dockerfile
serving/triton/dockerfiles/: Hunyuan3D.Dockerfile  LammaTRT.Dockerfile  StableDiffusion.Dockerfile  Step1X3D.Dockerfile
(+27 files in other folders)
